--- a/pet-server/package.json
+++ b/pet-server/package.json
@@ -10,6 +10,7 @@
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "express-ws": "^5.0.2",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
