后台管理系统配置了路由

--- a/pet-server/package.json
+++ b/pet-server/package.json
@@ -19,6 +19,7 @@
     "uuid": "^9.0.1"
   },
   "scripts": {
-    "dev": "nodemon ./app"
+    "dev": "nodemon ./app",
+    "serve": "node ./app"
   }
 }
