--- a/pet-admin/package.json
+++ b/pet-admin/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode development",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.9.0",
+    "axios": "^1.6.7",
     "element-plus": "^2.6.0",
     "path": "^0.12.7",
     "pinia": "^2.1.7",
