--- a/pet-admin/package.json
+++ b/pet-admin/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --mode development",
+    "dev": "vite --mode development --port 9001",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -16,6 +16,7 @@
     "path": "^0.12.7",
     "pinia": "^2.1.7",
     "reset-css": "^5.0.2",
+    "socket.io": "^2.5.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
