--- a/pet-server/package.json
+++ b/pet-server/package.json
@@ -16,6 +16,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.1",
     "sequelize": "^6.36.0",
+    "socket.io": "2",
     "uuid": "^9.0.1"
   },
   "scripts": {
